[tool.poetry]
name = "pubmed-filter"
version = "0.1.0"
description = "A tool to fetch and filter PubMed articles based on author affiliations"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "pubmed_filter"}]

[tool.poetry.dependencies]
python = "^3.8"
biopython = "^1.81"
pandas = "^2.0.0"
tqdm = "^4.65.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
